# fairsharer

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/: fairsharer.py
tests/: test_fairsharer.py  test_fairsharer.py.py
